Apresentação em angular.

--- a/index.html
+++ b/index.html
@@ -157,7 +157,8 @@ exampleApp.controller('ExampleController', function($scope){
 					<h2>Referências e exemplos</h2>
 					<ul>
 						<li><a href="https://www.youtube.com/watch?v=i9MHigUZKEM">AngularJS Fundamentals In 60-ish Minutes</a></li>
-						<li><a href="https://www.youtube.com/watch?v=i9MHigUZKEM">AngularJS Fundamentals In 60-ish Minutes</a></li>
+						<li><a href="http://angularjs4u.com/tables/top-10-angularjs-table-demos/">Top 10 AngularJS Table Demos</a></li>
+						<li><a href="https://www.reddit.com/r/angularjs">Reddit /r/angularjs</a></li>
 					</ul>
 				</section>
 			</div>
